src/test/ui/noncopyable-class.stderr
error[E0599]: no method named `clone` found for struct `Foo` in the current scope
  --> $DIR/noncopyable-class.rs:34:16
   |
LL | struct Foo {
   | ---------- method `clone` not found for this struct
...
LL |     let _y = x.clone();
   |                ^^^^^ method not found in `Foo`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `clone`, perhaps you need to implement it:
           candidate #1: `Clone`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
